--- a/DockerHW/docker-compose.yml
+++ b/DockerHW/docker-compose.yml
@@ -1,4 +1,12 @@
-version: '3'
+version: "3.8"
 
 services:
   web:
+    build: ./web
+    container_name: my_python_app
+    volumes:
+      - ./web:/app
+    working_dir: /app
+    command: ["python", "main.py"]
+    ports:
+      - "5000:5000"
